// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`five 1`] = `
Array [
  ContentBlock {
    "assemblyName": "test",
    "end": 66.05,
    "isLeftEndOfDisplayedRegion": false,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:27.05..66.05-0",
    "offsetPx": 521,
    "parentRegion": Object {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "reversed": false,
      "start": 0,
    },
    "refName": "ctgA",
    "reversed": false,
    "start": 26.05,
    "widthPx": 800,
  },
]
`;

exports[`four 1`] = `
Array [
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "end": undefined,
    "key": "{test}ctgA:1..700-0-beforeFirstRegion",
    "offsetPx": -100,
    "refName": undefined,
    "start": undefined,
    "variant": "boundary",
    "widthPx": 100,
  },
  ContentBlock {
    "assemblyName": "test",
    "end": 700,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:1..700-0",
    "offsetPx": 0,
    "parentRegion": Object {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "start": 0,
    },
    "refName": "ctgA",
    "reversed": undefined,
    "start": 0,
    "widthPx": 700,
  },
]
`;

exports[`one 1`] = `
Array [
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "end": undefined,
    "key": "{test}ctgA:1..800-0-beforeFirstRegion",
    "offsetPx": 0,
    "refName": undefined,
    "start": undefined,
    "variant": "boundary",
    "widthPx": -0,
  },
  ContentBlock {
    "assemblyName": "test",
    "end": 800,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:1..800-0",
    "offsetPx": 0,
    "parentRegion": Object {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "start": 0,
    },
    "refName": "ctgA",
    "reversed": undefined,
    "start": 0,
    "widthPx": 800,
  },
]
`;

exports[`three 1`] = `
Array [
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "end": undefined,
    "key": "{test}ctgA:49,301..50,000-0-reversed-beforeFirstRegion",
    "offsetPx": -100,
    "refName": undefined,
    "start": undefined,
    "variant": "boundary",
    "widthPx": 100,
  },
  ContentBlock {
    "assemblyName": "test",
    "end": 50000,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:49,301..50,000-0-reversed",
    "offsetPx": 0,
    "parentRegion": Object {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "reversed": true,
      "start": 0,
    },
    "refName": "ctgA",
    "reversed": true,
    "start": 49300,
    "widthPx": 700,
  },
]
`;

exports[`two 1`] = `
Array [
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "end": undefined,
    "key": "{test}ctgA:49,201..50,000-0-reversed-beforeFirstRegion",
    "offsetPx": 0,
    "refName": undefined,
    "start": undefined,
    "variant": "boundary",
    "widthPx": -0,
  },
  ContentBlock {
    "assemblyName": "test",
    "end": 50000,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:49,201..50,000-0-reversed",
    "offsetPx": 0,
    "parentRegion": Object {
      "assemblyName": "test",
      "end": 50000,
      "refName": "ctgA",
      "reversed": true,
      "start": 0,
    },
    "refName": "ctgA",
    "reversed": true,
    "start": 49200,
    "widthPx": 800,
  },
]
`;
